# backend/Models/Task.js
@@ -1,22 +1,20 @@
 const mongoose = require('mongoose');
+const Item = require('./Item');
 
 const taskSchema = new mongoose.Schema({
     title: {
         type: String,
         required: true,
     },
-    description: {
-        type: String,
-        required: true,
-    },
-    completed: {
-        type: Boolean,
-        default: false,
-    },
+
+    items: [{ type: mongoose.Schema.Types.ObjectId, ref: Item }],
     createdAt: {
         type: Date,
         default: Date.now,
+        // required: true,
     },
+
+
 });
 
 const Task = mongoose.model('Task', taskSchema);
