# backend/controllers/TaskController.js
@@ -1,9 +1,13 @@
 const Task = require('../Models/Task');
+const Item = require('../Models/Item');
 
 module.exports = {
     async getAllTasks(req, res) {
         try {
-            const tasks = await Task.find();
+            const tasks = await Task.find().populate({
+                path: 'items',
+                select: 'title priority status'
+            });
             res.json(tasks);
         } catch (error) {
             console.error(error);
@@ -12,10 +16,24 @@ module.exports = {
     },
 
     async createTask(req, res) {
+        const { title, createdAt, items } = req.body;
+
+        // Create the items and save them to the database
+        const createdItems = await Item.insertMany(items);
+
+        // Map the created items to their ObjectIds
+        const itemIds = createdItems.map((item) => item._id);
+
+        // Create the task with the item ObjectIds
+        const newTask = new Task({
+            title,
+            createdAt,
+            items: itemIds,
+        });
+
         try {
-            const { title, description } = req.body;
-            const task = new Task({ title, description });
-            await task.save();
+            await newTask.save();
+            const task = await Task.findById(newTask._id).populate('items');
             res.json(task);
         } catch (error) {
             console.error(error);
@@ -24,14 +42,20 @@ module.exports = {
     },
 
     async updateTask(req, res) {
+        const { id } = req.params;
+        const { title, items } = req.body;
+
         try {
-            const { id } = req.params;
-            const { title, description, completed } = req.body;
             const task = await Task.findByIdAndUpdate(
                 id,
-                { title, description, completed },
+                { title, items },
                 { new: true }
-            );
+            ).populate('items');
+
+            if (!task) {
+                return res.status(404).json({ message: 'Task not found' });
+            }
+
             res.json(task);
         } catch (error) {
             console.error(error);
@@ -40,9 +64,13 @@ module.exports = {
     },
 
     async deleteTask(req, res) {
+        const { id } = req.params;
+
         try {
-            const { id } = req.params;
-            await Task.findByIdAndDelete(id);
+            const task = await Task.findByIdAndDelete(id).populate('items');
+            if (!task) {
+                return res.status(404).json({ message: 'Task not found' });
+            }
             res.json({ message: 'Task deleted' });
         } catch (error) {
             console.error(error);
